@@ -29,4 +29,27 @@ longdouble_pointer_return_test(long double a)
   return keep;
 }
 
+EXTERN int
+longdouble_array_test(long double *a, int n)
+{
+  long double sum;
+  int i;
+  int ret;
+
+  for(sum=0.0,i=0; i < n; i++)
+  {
+    sum += a[i];
+  }
+
+  if(sum == 100.00)
+    ret = 1;
+  else
+    ret = 0;
+
+  for(i=0; i < n; i++)
+    a[i] = (long double) i+1;
+
+  return ret;
+}
+
 #endif
