@@ -2,9 +2,12 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Added support for pointers to longdouble (in C "long double *") type
+  - Added support for array of longdouble (in C "long double []") type
   - Added tied array interface for record array members (see FFI::Platypus::Record::TieArray)
   - Array members of records can now be accessed (set/get) by element
   - Array members of records types are now documented (see FFI::Platypus::Record)
+  - Bugfix: array wasn't being updated on return for variable length
+    array types
 
 0.25      2015-02-16 20:18:41 -0500
   - Probe for proper long double support instead of trusting ffi.h
